--- a/environment.yml
+++ b/environment.yml
@@ -1,11 +1,15 @@
-name: moveapps-python-sdk
+name: RW_APP
 channels:
   - conda-forge
 dependencies:
   - python=3.11
   - pandas
+  - matplotlib
   - geopandas
   - movingpandas
   - pluggy
   - python-dotenv
   - deprecated
+  - pip
+  - pip:
+        - -e ../random-walk-python
