--- a/Dockerfile_unittest
+++ b/Dockerfile_unittest
@@ -12,6 +12,8 @@ COPY sdk/ ./sdk/
 COPY resources/ ./resources/
 COPY tests/ ./tests/
 COPY app/ ./app/
+COPY random-walk-python/ ./random-walk-python/
+
 RUN conda env create --prefix ${ENV_PREFIX}  --file environment.yml && \
     conda clean --all --yes
 
