--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,8 +10,15 @@ jobs:
       contents: read
 
     steps:
-      - name: Checkout repository
+      - name: Add GitLab credentials for submodules
+        run: |
+          git config --global url."https://${{ secrets.GITLAB_TOKEN }}:@gitlab.tu-dortmund.de/".insteadOf "git@gitlab.tu-dortmund.de:"
+          git config --global url."https://${{ secrets.GITLAB_TOKEN }}:@gitlab.tu-dortmund.de/".insteadOf "https://gitlab.tu-dortmund.de/"
+
+      - name: Checkout repository including private submodules
         uses: actions/checkout@v3
+        with:
+          submodules: recursive
 
       - name: Setup Docker buildx
         uses: docker/setup-buildx-action@v2
